fix alignment

--- a/src/components/wallet-card/wallet-card.scss
+++ b/src/components/wallet-card/wallet-card.scss
@@ -17,7 +17,7 @@
     justify-content: space-between;
     align-items: center;
     border-bottom: 1px solid $black;
-    padding: 8px;
+    padding: 8px 0;
 
     &:last-child {
       border-bottom: 0;
